# learning_AgenticAI

./: .env  .env.example  .gitignore  CONCEPTUAL_QNS.md  LEARNING_LOG.md  README.md  example.txt  pyproject.toml  pyvenv.cfg  requirements.txt
.claude/: settings.local.json
lib/: providers.py
module1_foundations/: README.md  agent.py  agent_Claude.py  agent_Gemini.py  agent_Gemini_and_Ollama.py  tools.py  tools_Claude.py
module2_langgraph/: README.md  agent.py  graph.mmd  state.py  test_checkpoint.py  tools.py
module3_multiagent/: 01_sequence_plus_critic_loop_crewAI.py  02_sequence_plus_critic_loop_langgraph.py  03_hierarchical_graph.mmd  03_hierarchical_langgraph.py  04_router_experts_graph.mmd  04_router_experts_langgraph.py  README.md  requirements.txt  tools.py
module4_memory_rag/: 01_indexer.py  02_memory_stores.py  03_agent_langgraph.py  04_test_episodic.py  05_test_rag.py  06_inspect_memory.py  README.md  requirements.txt  semantic_memory.db
module4_memory_rag/chroma_db/: chroma.sqlite3
module4_memory_rag/knowledge_base/: agentic_ai_patterns.md  llm_provider_notes.md  python_best_practices.md
module5_production/: 01_cache.py  02_retry.py  03_telemetry.py  04_agent_RAG.py  05_service.py  06_load_test.py  README.md  body.json
module5_production/cache_db/: chroma.sqlite3
module6_observability_eval/: 01_eval_dataset.py  02_metrics.py  03_test_harness.py  04_regression_test.py  05_ragas_comparison.py  README.md
